# Python_ML.42

./: .init_conda_in_mac.sh  README.md  q  todo.txt
Python_Module_00/ex00/: answers.txt  requirements.txt
Python_Module_00/ex01/: exec.py  test.sh
Python_Module_00/ex02/: test.sh  whois.py
Python_Module_00/ex03/: count.py  test.sh
Python_Module_00/ex04/: operations.py  test.sh
Python_Module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Python_Module_00/ex06/: recipe.py
Python_Module_00/ex07/: filterwords.py
Python_Module_00/ex08/: sos.py
Python_Module_00/ex09/: guess.py
Python_Module_00/ex10/: loading.py  test.py
Python_Module_01/: code_blocks.md  correction_01.md
Python_Module_01/Exercise01__Family_tree/: game.py
Python_Module_01/Exercise02__The_Vector/: vector.py
Python_Module_01/Exercise03__The_Matrix/: matrix.py
Python_Module_01/ex00/: book.py  recipe.py  test.py
Python_Module_01/ex01/: game.py  test.py
Python_Module_01/ex02/: test.py  test2.py  vector.py
Python_Module_01/ex03/: generator.py  test.py
Python_Module_01/ex04/: eval.py  matrix.py  test.py
Python_Module_01/ex05/: banking_test2.py  banking_test3.py  banking_test4.py  test.py  the_bank.py
Python_Module_02/: code_blocks.md
Python_Module_02/ex04/: README.md  build.sh  pyproject.toml  setup.py
Python_Module_02/ex04/src/my_minipack/: loading.py
Python_Module_02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
Python_Module_03/: Untitled17.ipynb  code_blocks.md  module03.md
module02/: correction.md
module04/: module04.md
(+91 files in other folders)
